--- a/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
+++ b/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Alexa.NET" Version="1.4.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.1.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.21.6" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.16.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
   </ItemGroup>
 
