--- a/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
+++ b/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
@@ -17,4 +17,13 @@
     <DotNetCliToolReference Include="Amazon.Lambda.Tools" Version="1.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data">
+      <HintPath>System.Data.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
