--- a/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
+++ b/OnLaunchAWSLambda/OnLaunchAWSLambda/OnLaunchAWSLambda.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="System.Data.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Alexa.NET" Version="1.4.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.1.0" />
